kubernetes/deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: APPLICATION_NAME
  labels:
    app: APPLICATION_NAME
spec:
  template:
    metadata:
      labels:
        app: APPLICATION_NAME
    spec:
      containers:
        - name: node
          image: gcr.io/GKE_PROJECT_NAME/APPLICATION_NAME:latest
          resources:
            limits:
              cpu: "1"
            requests:
              cpu: "0.25"
          ports:
            - containerPort: 3000
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 60
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 60
