kubernetes/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: $APPLICATION_NAME
  name: $APPLICATION_NAME
spec:
  ports:
  - port: 3000
    protocol: TCP
    name: node-port
  selector:
    app: $APPLICATION_NAME
  type: NodePort
