kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-resource
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  rules:
  - host: $HOST_NAME
    http:
      paths:
      - path: /
        backend:
          serviceName: $APPLICATION_NAME
          servicePort: 3000
  tls:
  - secretName: $CERTIFICATE_NAME
